# pickem

./: .gitignore  .log.md  .mgmt.md  Cargo.toml  Changelog.md  Makefile  README.md  architecture.md  broken-example.yml  default.nix  demo.mkv  example.yml  install  pickem.nix  test.yml
docs/: architecture.md
extensions/shell/: core.zsh  example.zsh
shell/: core.zsh  pickem-widget.zsh  pickem_run
src/: args.rs  cli_driver.rs  config.rs  driver.rs  lib.rs  main.rs  parser.rs  tree.rs  tui.rs  util.rs
src/front_end/: traits.rs  tui.rs
src/frontend/: mod.rs  tui.rs
