[package]
name = "pickem"
version = "0.1.0"
authors = ["Lodek <23224552+Lodek@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
linked-hash-map = ""
termion = "1"
termios = "0.3"
